Fixed user profile page statistic elements that were off on mobile screen

--- a/frontend/src/styles/components/user-page/_user-details.scss
+++ b/frontend/src/styles/components/user-page/_user-details.scss
@@ -43,10 +43,10 @@
             margin-top: 1rem;
             display: flex;
             align-items: center;
-            font-size: 1.1rem;
+            font-size: 1rem;
             gap: 1rem;
             justify-content: center;
-            
+
             .user-stats-icon {
                 font-size: 0.9rem;
                 display: flex;
@@ -63,6 +63,7 @@
 
             @include for-large-tablet {
                 position: static;
+                font-size: 1.1rem;
             }
         }
     }
